# Neural_Network

./: CMakeLists.txt  README.md  main.cu  neuralnetwork.cu  neuralnetwork.h  read_and_process_csv.cpp  read_and_process_csv.h
